# saas-api-samples

./: .gitignore  README.md  post_terraform_folder.py  post_yaml_cloudformation_python3.py  purposely_insecure_terraform.tf  realtime_scan.js  realtime_scan.py  realtime_scan_p3.py  sample_cf.yaml  scan_details_p3.py  scan_list_p3_params.py
codelessPlugin/: aquaplugin-APIGatewayPrivateEndpointsnew.json  aquaplugin-BucketNaming.json  aquaplugin-DevStages.json  aquaplugin-DynamoDBContinuousBackupsNew.json  aquaplugin-EKSKubernetesVersionNew.json  aquaplugin-ELBv2HTTPSOnlyNew.json  aquaplugin-IAMUsernameMatchesRegexnew.json  aquaplugin-KMSScheduledDeletionnew.json  aquaplugin-KeyRotationenabled.json  aquaplugin-LambdaTracingEnabledNew.json  aquaplugin-S3BucketVersioningNew.json  aquaplugin-S3SSEEncryption.json  aquaplugin-SNSTopicCMKEncryptionnew.json  aquaplugin-Volumeattachmentstate.json  aquaplugin-ec2instancearenotofnanotype.json
sample-js/: Inventory-AWS.js  Inventory-Azure.js  Inventory-Google.js  generate_new_key_aws.js  make_request.js  realtime_scan.js
sample-python/: .env  main.py  post_terraform_folder.py  post_yaml_cloudformation.py  post_yaml_cloudformation_python3.py  pyproject.toml  readme.md  realtime_scan_p3.py  requirements.txt  scan_details_p3.py  scan_list_p3_params.py
sample-python/generate tokens/: auth.py  bash_generate_tokens.sh  python_generate_token.py
sample-python/helpers/: aqua.py  auth.py
sample-python/legacy/: post_yaml_cloudformation_python3.py  realtime_scan_p3.py  requirements.txt  scan_details.py  scan_details_p3.py
(+3 files in other folders)
